[package]
name = "yew-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.0"
gloo-utils = "0.1"
gloo-timers = "0.2.3"
pulldown-cmark = "0.9.1"

graphql_client = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


wasm-bindgen = "0.2.74" # This is pinned primarily for CI stability.
wasm-bindgen-futures = "0.4"

log = "0.4.6"
wasm-logger = "0.2.0"

lazy_static = "1.4"
config = "0.13.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Navigator'
]

